# anim

./: .clang-format  .clangd  CMakeLists.txt
src/: main.cpp
src/app/: app.cpp  app.h
src/engine/app/: app.cpp  app.h
src/engine/glad/: glad.c
src/glad/: glad.c  glad.h
src/math/: mat4.h  quad.h  transform.h  vec2.h  vec3.h  vec4.h
src/scene/: scene.cpp  scene.h  test_scene.cpp  test_scene.h
